--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <section class="calculator">
     <form>
@@ -30,10 +32,11 @@
       <button type="button" class="btn btn-grey" data-num="0">0</button>
       <button type="button" class="btn btn-grey" data-num=".">.</button>
 
-      <button type="button" class="btn btn-equal">=</button>
-      <button type="button" class="btn btn-clear">C</button>
+      <button type="button" class="btn-equal">=</button>
+      <button type="button" class="btn-clear">C</button>
     </div>
   </section>
   <script src="script.js"></script>
 </body>
+
 </html>
